Name:                handlersocket
Version:             0.1
Synopsis:            Haskell client for HandlerSocket
Homepage:            http://github.com/kim/handlersocket/
License:             BSD3
License-file:        LICENSE
Author:              Kim Altintop
Maintainer:          kim.altintop@gmail.com
Category:            Database
Build-type:          Simple

-- Extra-source-files:
Cabal-version:       >=1.2

Library
  hs-source-dirs:    src

  Exposed-modules:
      HandlerSocket

  Build-depends:
      base >= 4 && < 5
    , binary >= 0.5.0
    , bytestring >= 0.9.1.7
    , split >= 0.1.3
    , network >= 2.3
    , transformers >= 0.2.2.0
    , enumerator >= 0.4.6

  Other-modules:
      HandlerSocket.Types
    , HandlerSocket.Protocol
